--- a/src/components/Transfer.css
+++ b/src/components/Transfer.css
@@ -1,10 +1,10 @@
-.transactionsContainer {
+.transferContainer {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Align items to the left side */
+  align-items: center;
 }
 
-.transactionsBox {
+.transferBox {
   border: 1px solid #ccc;
   padding: 10px;
   margin: 10px;
